@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.streamlink-tester" name="Streamlink Tester" version="1.2.3" provider-name="Twilight0">
+<addon id="plugin.video.streamlink-tester" name="Streamlink Tester" version="1.2.4" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0"/>
         <import addon="script.module.tulip" version="2.0.12"/>
@@ -18,7 +18,10 @@
         <website>https://twitter.com/TwilightZer0</website>
         <source>https://github.com/Twilight0/plugin.video.streamlink-tester</source>
         <size>106257</size>
-        <news>[B]1.2.3[/B] - 02-07-2018
+        <news>[B]1.2.3[/B] - 03-07-2018
+- Do not use quote for building custom headers
+
+[B]1.2.3[/B] - 02-07-2018
 - Better handling of headers appending
 - Log json objects for debugging purposes
 - Enhanced dash and manifest types conditionals</news>
